# llmlog

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  diff.rs  main.rs  ollama.rs  prompt.rs  repo.rs
web/: .gitignore  bun.lockb  drizzle.config.ts  package.json  scripts.ts  tailwind.config.js
web/src/: app.css  app.d.ts  app.html
web/src/lib/db/: index.ts  schema.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/[org]/[repo]/: +layout.ts  +page.server.ts  +page.svelte
web/src/routes/[org]/[repo]/[id]/: +page.server.ts  +page.svelte
web/src/routes/[org]/[repo]/preview/[id]/: +page.server.ts  +page.svelte
web/src/routes/api/create/: +server.ts
web/src/routes/api/publish/: +server.ts
web/src/routes/api/update/: +server.ts
